<resources>
    <string name="app_name">Briscola</string>
    <string name="API_KEY">81113e69-5276-4801-a1f0-e2185a27d2a5</string>
    <string name="start_game_endpoint">http://mobile17.ifmledit.org/api/room/Group07</string>
    <string name="database_name">Briscola</string>
    <string name="database_version">1</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="local">Local Games</string>
    <string name="online">Online Games</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="totalGames">Games Played</string>
    <string name="wonGames">Games Won</string>
    <string name="lostGames">Games Lost</string>
    <string name="drawnGames">Games Drawn</string>
    <string name="terminatedGames">Games Abandoned</string>
</resources>
